# Lab3_2sem

./: CMakeLists.txt  Lab3_2.cpp  README.md  print_func.cpp  table_func.cpp  table_func.h
Testing/: test_file1  test_file2
debug/: .ninja_deps  .ninja_log  CMakeCache.txt  Lab3_2  build.ninja  cmake_install.cmake
debug/.cmake/api/v1/reply/: cache-v2-1b5b2bafb7981ee92d69.json  cmakeFiles-v1-7bb405fcb5a5b8790b76.json  codemodel-v2-c6254527a72bddb21265.json  index-2022-05-19T12-31-40-0617.json  target-Lab3_2-Debug-0e8f93d27530ec2e2a34.json
